--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
 		"class-validator": "^0.14.2",
 		"connect-redis": "^9.0.0",
 		"cookie-parser": "^1.4.7",
+		"device-detector-js": "^3.0.3",
 		"dotenv": "^17.2.3",
 		"express-session": "^1.18.2",
+		"geoip-lite": "^1.4.10",
 		"graphql": "^16.12.0",
+		"i18n-iso-countries": "^7.14.0",
 		"ioredis": "^5.8.2",
 		"prisma": "^6.19.0",
 		"reflect-metadata": "^0.2.2",
@@ -55,6 +58,7 @@
 		"@types/cookie-parser": "^1.4.10",
 		"@types/express": "^5.0.0",
 		"@types/express-session": "^1.18.2",
+		"@types/geoip-lite": "^1.4.4",
 		"@types/jest": "^30.0.0",
 		"@types/node": "^22.10.7",
 		"@types/supertest": "^6.0.2",
